# new_tui_project_template

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.toml  config.toml.example  config.yaml  config.yaml.example  demo.tape  pyproject.toml
.github/: dependabot.yml
.github-disabled/workflows/: build.yml  publish-dev.yml  publish.yml  release.yml
.github/workflows/: build.yml  build.yml.disabled  publish-dev.yml  publish-dev.yml.disabled  publish.yml.disabled  release.yml  release.yml.disabled  test.yml
docs/: CONFIGURATION.md
src/new_tui_project_template/: __init__.py  __main__.py  app.py  config.py
